# front-chat

./: Cargo.toml  README.md  VIM_CHAT_DESIGN.md  chat.html  manifest.toml
configs/: dynamic-claude.json  dynamic-moonshot.json  moonshot.json  supervisor.json
configs/manifests/: fs.toml
src/: bindings.rs  lib.rs
wit/: world.wit
