[package]
name = "front-chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
wit-bindgen = "0.17.0"

[package.metadata.component]
package = "component:front-chat"

[package.metadata.component.target.dependencies]
"theater:simple" = { path = "./wit/deps/theater-simple" }

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize", "PartialEq"]
generate_unused_types = true
